src/app/app.scss
/* ... */
ion-card-header {
  --ion-font-family: 'Baloo', sans-serif;
  white-space: normal;
}

.blockquote {
  border-radius: 5px;
  padding: 5px 10px;
  background-color: #cfd7e1;
  border: 1px solid #5b7391;
  font-style: italic;
}

[no-margin-important] {
  margin: 0px !important;
}
ion-label {
  white-space: normal;
  p {
    white-space: normal;
  }
}
ion-modal{
  --min-height:100%!important;
  --min-width:100%!important;
}

.margin-right-5 {
  margin-right: 5px;
}
.margin-top-5 {
  margin-top:5px;
}
.padding-right-8 {
  padding-right:8px;
}

.margin-horizontal-5 {
  margin-right: 5px;
  margin-left: 5px;
}

.checkbox-icon {
  border-radius: 0px !important;
}
ion-list.no-last-border .item-block:last-child {
  border-bottom: none !important;
}
ion-buttons[start] {
  order: 1;
  margin: 0 6px;
}

ion-buttons[start] button {
  min-width: 44px;
  box-shadow: none;
}

ion-list.no-label-margin ion-label {
  margin: 0px !important;
}

.bean-icon {

  /*background: url(../assets/icon/bean.svg) no-repeat top left;*/
  background-size: contain;
  width: 80px;
  height: 35px;
  margin: 20px auto 0 auto;

}


[text-italic]{
  font-style:italic;
}
[justify-content-start] .button-inner{
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

pre{
  font-family:inherit!important;
  margin:0px!important;
  white-space: pre-wrap;
}


ion-tab-button {
  ion-icon {
    color: #cccccc;
  }
  ion-icon.stroke {
    stroke: #cccccc;
  }
  ion-label {
    color: #cccccc;
  }
}

ion-tab-button.tab-selected {
  ion-icon {
    color: #B88265;
  }
  ion-icon.stroke{
    stroke: #B88265;
  }
  ion-label {
    color: #B88265;
  }
}

.position-absolute-button {
  position: absolute;
  top: 0;
  right: 10px;
  background: rgba(255, 255, 255, 0.8);
}
.position-absolute-button-sort-left {
  position: absolute;
  top: 0px;
  left: 0px;
  background: rgba(255, 255, 255, 0.8);
}
.position-absolute-button-sort-right {
  position: absolute;
  top: 0;
  left: 70px;
  background: rgba(255, 255, 255, 0.8);
}


ion-alert.select-full-screen {
  .alert-wrapper {
    min-height: 100%;
    min-width: 100%;
    height: 100%;
    width: 100%;
  }

  .alert-radio-label {
    white-space: normal !important;
  }

  .alert-radio-group {
    max-height: 100%;
    height: 100%;
  }

  // Applies a text wrap on ion options
  .alert-tappable.alert-radio {
    height: auto;
    contain: content;
  }


}

ion-alert.select-break-text {

  .alert-checkbox-label {
    white-space: normal !important;
  }

  .alert-tappable.alert-checkbox {
    height: auto;
    contain: content;
  }


}


ion-split-pane {
  --border: none !important;

  ion-menu {
    background-color: #F0F0F0 !important;


    ion-content {
      ion-item {
        text-align: center;
        --background: #F0F0F0 !important;
      }
    }

    ion-footer {
      ion-item {
        text-align: center;
        --background: #F0F0F0 !important;
        font-size: 12px;
      }
    }

  }


}

ion-menu:host .menu-inner {


  box-shadow: none;

}
/* ... */

